Update CLI too.

--- a/nbs/cli/core_utils_discovery.ipynb
+++ b/nbs/cli/core_utils_discovery.ipynb
@@ -72,7 +72,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def get_core_utilities() -> List[CoreUtilityInfo]:\n",
+    "def get_core_utilities(\n",
+    ") -> List[CoreUtilityInfo]:  # TODO: Add return description\n",
     "    \"\"\"Get information about core utility functions.\"\"\"\n",
     "    utilities = []\n",
     "    \n",
