--- a/nbs/cli/example_discovery.ipynb
+++ b/nbs/cli/example_discovery.ipynb
@@ -43,7 +43,7 @@
     "from typing import Dict, List, Tuple, Any, Optional\n",
     "import re\n",
     "\n",
-    "from cjm_fasthtml_tailwind.cli.utils import iterate_all_modules_with_items"
+    "from cjm_fasthtml_tailwind.cli.utils import iterate_all_modules_with_items, list_utility_modules, discover_utility_modules"
    ]
   },
   {
@@ -120,6 +120,56 @@
     "    \"\"\"List all test example functions across all utility modules.\"\"\"\n",
     "    return iterate_all_modules_with_items(extract_test_examples_from_module)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92dff533-e1a4-4291-8578-0e332adce6ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def list_module_examples(\n",
+    "    module_name: str  # Name of the module to inspect\n",
+    ") -> List[ExampleInfo]:  # List of ExampleInfo objects\n",
+    "    \"\"\"List all test example functions in a specific utility module.\"\"\"\n",
+    "    # Find the module\n",
+    "    for name, module in discover_utility_modules():\n",
+    "        if name == module_name:\n",
+    "            return extract_test_examples_from_module(module, module_name)\n",
+    "    \n",
+    "    return []  # Module not found"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5e492d3-c5ee-4e66-91e8-c68fece2c243",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def get_example_by_name(\n",
+    "    module_name: str,  # Name of the module\n",
+    "    feature: str  # Feature name (e.g., 'basic', 'directional')\n",
+    ") -> Optional[ExampleInfo]:  # ExampleInfo object or None if not found\n",
+    "    \"\"\"Get a specific example by module name and feature.\"\"\"\n",
+    "    examples = list_module_examples(module_name)\n",
+    "    \n",
+    "    for example in examples:\n",
+    "        if example.feature == feature:\n",
+    "            return example\n",
+    "    \n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "278815c9-4578-4f29-b7cb-bec782033f36",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
