--- a/nbs/cli/factory_extraction.ipynb
+++ b/nbs/cli/factory_extraction.ipynb
@@ -42,7 +42,7 @@
     "from cjm_fasthtml_tailwind.core.base import BaseFactory\n",
     "from typing import Dict, List, Tuple, Any, Optional\n",
     "\n",
-    "from cjm_fasthtml_tailwind.cli.utils import iterate_all_modules_with_items"
+    "from cjm_fasthtml_tailwind.cli.utils import iterate_all_modules_with_items, discover_utility_modules"
    ]
   },
   {
@@ -121,6 +121,48 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8b3dad7a-e6c2-4d82-9773-b728e076aed3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def list_module_factories(\n",
+    "    module_name: str  # Name of the module to inspect (e.g., 'spacing', 'sizing')\n",
+    ") -> List[FactoryInfo]:  # List of FactoryInfo objects for the module\n",
+    "    \"\"\"List all factory instances in a specific utility module.\"\"\"\n",
+    "    # Find the module\n",
+    "    for name, module in discover_utility_modules():\n",
+    "        if name == module_name:\n",
+    "            return extract_factories_from_module(module, module_name)\n",
+    "    \n",
+    "    return []  # Module not found"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86a3935c-2a1a-4092-aee4-25bd194b2fbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def get_factory_by_name(\n",
+    "    module_name: str,  # Name of the module\n",
+    "    factory_name: str  # Name of the factory (e.g., 'p', 'w', 'flex')\n",
+    ") -> Optional[FactoryInfo]:  # FactoryInfo object or None if not found\n",
+    "    \"\"\"Get a specific factory by module name and factory name.\"\"\"\n",
+    "    factories = list_module_factories(module_name)\n",
+    "    \n",
+    "    for factory_info in factories:\n",
+    "        if factory_info.name == factory_name:\n",
+    "            return factory_info\n",
+    "    \n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc8ca137-d073-45c7-acbb-9bf7282585cd",
    "metadata": {},
    "outputs": [],
    "source": []
