--- a/nbs/cli/search.ipynb
+++ b/nbs/cli/search.ipynb
@@ -42,7 +42,7 @@
     "from dataclasses import dataclass\n",
     "from cjm_fasthtml_tailwind.cli.utils import (\n",
     "    SearchResult, search_in_name_and_text, \n",
-    "    search_in_fields, discover_utility_modules, list_utility_modules, search_in_text\n",
+    "    search_in_fields, discover_utility_modules, list_utility_modules, search_in_text, search_in_source_code\n",
     ")\n",
     "from cjm_fasthtml_tailwind.cli.factory_extraction import list_all_factories\n",
     "from cjm_fasthtml_tailwind.cli.example_discovery import list_all_examples\n",
