--- a/nbs/cli/test_code.ipynb
+++ b/nbs/cli/test_code.ipynb
@@ -58,7 +58,9 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def create_test_script(code: str) -> str:\n",
+    "def create_test_script(\n",
+    "    code: str  # TODO: Add description\n",
+    ") -> str:  # TODO: Add return description\n",
     "    \"\"\"Create a test script with necessary imports and the provided code.\"\"\"\n",
     "    # Build the import statements dynamically based on discovered modules\n",
     "    imports = [\"from fasthtml.common import *\"]\n",
