--- a/nbs/cli/utils.ipynb
+++ b/nbs/cli/utils.ipynb
@@ -93,7 +93,10 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def print_header(title: str, width: int = 60):\n",
+    "def print_header(\n",
+    "    title: str,  # TODO: Add description\n",
+    "    width: int = 60  # TODO: Add description\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Print a formatted header with title and separator.\"\"\"\n",
     "    print(title)\n",
     "    print(\"=\" * width)\n",
@@ -109,7 +112,11 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def print_not_found(item_type: str, item_name: str, module_name: Optional[str] = None):\n",
+    "def print_not_found(\n",
+    "    item_type: str,  # TODO: Add description\n",
+    "    item_name: str,  # TODO: Add description\n",
+    "    module_name: Optional[str] = None  # TODO: Add description\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Print a standardized not found message.\"\"\"\n",
     "    if module_name:\n",
     "        print(f\"No {item_type} '{item_name}' found in module '{module_name}' or module doesn't exist.\")\n",
@@ -126,7 +133,11 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def print_total(item_type: str, count: int, across_modules: bool = False):\n",
+    "def print_total(\n",
+    "    item_type: str,  # TODO: Add description\n",
+    "    count: int,  # TODO: Add description\n",
+    "    across_modules: bool = False  # TODO: Add description\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Print a standardized total count message.\"\"\"\n",
     "    if across_modules:\n",
     "        print(f\"\\nTotal {item_type} across all modules: {count}\")\n",
@@ -142,12 +153,10 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def print_helpful_instructions(instructions: List[Tuple[str, Optional[str]]]):\n",
-    "    \"\"\"Print helpful instructions section.\n",
-    "    \n",
-    "    Args:\n",
-    "        instructions: List of (description, example) tuples\n",
-    "    \"\"\"\n",
+    "def print_helpful_instructions(\n",
+    "    instructions: List[Tuple[str, Optional[str]]]  # List of (description, example) tuples\n",
+    "):\n",
+    "    \"Print helpful instructions section.\"\n",
     "    print(\"\\nTo explore further:\")\n",
     "    for desc, example in instructions:\n",
     "        print(f\"  {desc}\")\n",
@@ -238,7 +247,10 @@
     "    doc_field: str  # Name of the field containing the documentation\n",
     ") -> Callable[[Any], str]:  # Formatter function\n",
     "    \"\"\"Create a simple formatter for items with name and documentation fields.\"\"\"\n",
-    "    def formatter(item):\n",
+    "    def formatter(\n",
+    "        item  # TODO: Add type hint and description\n",
+    "    ): # TODO: Add type hint\n",
+    "        \"TODO: Add function description\"\n",
     "        name = getattr(item, name_field, \"Unknown\")\n",
     "        doc = getattr(item, doc_field, \"No documentation available\")\n",
     "        return f\"{name}: {doc}\"\n",
@@ -257,8 +269,14 @@
     "    prefix: str = \"  \"  # Indentation prefix\n",
     ") -> Callable[[Any], Callable[[Any], str]]:  # Returns a formatter factory\n",
     "    \"\"\"Create a formatter that indents items with a prefix.\"\"\"\n",
-    "    def make_formatter(inner_formatter: Callable[[Any], str]) -> Callable[[Any], str]:\n",
-    "        def formatter(item):\n",
+    "    def make_formatter(\n",
+    "        inner_formatter: Callable[[Any], str]  # TODO: Add description\n",
+    "    ) -> Callable[[Any], str]:  # TODO: Add return description\n",
+    "        \"TODO: Add function description\"\n",
+    "        def formatter(\n",
+    "            item  # TODO: Add type hint and description\n",
+    "        ): # TODO: Add type hint\n",
+    "            \"TODO: Add function description\"\n",
     "            return prefix + inner_formatter(item)\n",
     "        return formatter\n",
     "    return make_formatter"
@@ -273,11 +291,11 @@
    "source": [
     "#| export\n",
     "def extract_match_context(\n",
-    "    text: str, \n",
-    "    query: str, \n",
-    "    case_sensitive: bool = False, \n",
-    "    context_size: int = 30\n",
-    ") -> str:\n",
+    "    text: str,   # TODO: Add description\n",
+    "    query: str,   # TODO: Add description\n",
+    "    case_sensitive: bool = False,   # TODO: Add description\n",
+    "    context_size: int = 30  # TODO: Add description\n",
+    ") -> str:  # TODO: Add return description\n",
     "    \"\"\"Extract context around a match in text.\"\"\"\n",
     "    text_search = text if case_sensitive else text.lower()\n",
     "    query_search = query if case_sensitive else query.lower()\n",
@@ -304,10 +322,10 @@
    "source": [
     "#| export\n",
     "def extract_source_line_context(\n",
-    "    source: str, \n",
-    "    query: str, \n",
-    "    case_sensitive: bool = False\n",
-    ") -> str:\n",
+    "    source: str,   # TODO: Add description\n",
+    "    query: str,   # TODO: Add description\n",
+    "    case_sensitive: bool = False  # TODO: Add description\n",
+    ") -> str:  # TODO: Add return description\n",
     "    \"\"\"Extract line context for a match in source code.\"\"\"\n",
     "    source_search = source if case_sensitive else source.lower()\n",
     "    query_search = query if case_sensitive else query.lower()\n",
@@ -338,12 +356,12 @@
    "source": [
     "#| export\n",
     "def create_search_result(\n",
-    "    content_type: str,\n",
-    "    module_name: str,\n",
-    "    item_name: str,\n",
-    "    match_context: str,\n",
-    "    match_location: str\n",
-    ") -> SearchResult:\n",
+    "    content_type: str,  # TODO: Add description\n",
+    "    module_name: str,  # TODO: Add description\n",
+    "    item_name: str,  # TODO: Add description\n",
+    "    match_context: str,  # TODO: Add description\n",
+    "    match_location: str  # TODO: Add description\n",
+    ") -> SearchResult:  # TODO: Add return description\n",
     "    \"\"\"Create a SearchResult with standard fields.\"\"\"\n",
     "    return SearchResult(\n",
     "        content_type=content_type,\n",
@@ -382,14 +400,14 @@
    "source": [
     "#| export\n",
     "def search_in_name_and_text(\n",
-    "    query: str,\n",
-    "    item_name: str,\n",
-    "    text: str,\n",
-    "    content_type: str,\n",
-    "    module_name: str,\n",
-    "    text_location: str,\n",
-    "    case_sensitive: bool = False\n",
-    ") -> List[SearchResult]:\n",
+    "    query: str,  # TODO: Add description\n",
+    "    item_name: str,  # TODO: Add description\n",
+    "    text: str,  # TODO: Add description\n",
+    "    content_type: str,  # TODO: Add description\n",
+    "    module_name: str,  # TODO: Add description\n",
+    "    text_location: str,  # TODO: Add description\n",
+    "    case_sensitive: bool = False  # TODO: Add description\n",
+    ") -> List[SearchResult]:  # TODO: Add return description\n",
     "    \"\"\"Search in both name and text fields, returning search results.\"\"\"\n",
     "    results = []\n",
     "    \n",
@@ -425,7 +443,9 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def check_factory_usage_patterns(factory_name: str) -> List[str]:\n",
+    "def check_factory_usage_patterns(\n",
+    "    factory_name: str  # TODO: Add description\n",
+    ") -> List[str]:  # TODO: Add return description\n",
     "    \"\"\"Get regex patterns to match common factory usage patterns.\"\"\"\n",
     "    import re\n",
     "    \n",
@@ -674,7 +694,7 @@
    "source": [
     "#| export\n",
     "def iterate_all_modules_with_items(\n",
-    "    extractor_func,  # Function to extract items from a module\n",
+    "    extractor_func,    # Function to extract items from a module - TODO: Add type hint\n",
     "    module_filter: Optional[str] = None  # Optional specific module to filter for\n",
     ") -> Dict[str, List[Any]]:  # Dictionary mapping module names to their items\n",
     "    \"\"\"Generic iterator for extracting items from all modules.\"\"\"\n",
@@ -780,7 +800,9 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def load_code_from_file(filepath: str) -> Optional[str]:\n",
+    "def load_code_from_file(\n",
+    "    filepath: str  # TODO: Add description\n",
+    ") -> Optional[str]:  # TODO: Add return description\n",
     "    \"\"\"Load code from a file.\"\"\"\n",
     "    try:\n",
     "        path = Path(filepath).expanduser().resolve()\n",
