--- a/nbs/utilities/flexbox_and_grid.ipynb
+++ b/nbs/utilities/flexbox_and_grid.ipynb
@@ -94,7 +94,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_flexbox_and_grid_basis_examples():\n",
+    "def test_flexbox_and_grid_basis_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test flex basis utilities with various scale values.\"\"\"\n",
     "    # Test flex basis utilities\n",
     "    assert str(basis(0)) == \"basis-0\"\n",
@@ -157,7 +158,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_flexbox_and_grid_direction_examples():\n",
+    "def test_flexbox_and_grid_direction_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test flex direction utilities.\"\"\"\n",
     "    # Test flex direction utilities\n",
     "    assert flex_direction.row == \"flex-row\"\n",
@@ -205,7 +207,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_flexbox_and_grid_wrap_examples():\n",
+    "def test_flexbox_and_grid_wrap_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test flex wrap utilities.\"\"\"\n",
     "    # Test flex wrap utilities\n",
     "    assert flex_wrap.nowrap == \"flex-nowrap\"\n",
@@ -259,7 +262,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_flexbox_and_grid_flex_examples():\n",
+    "def test_flexbox_and_grid_flex_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test flex utilities for combined grow/shrink properties.\"\"\"\n",
     "    # Test flex utilities\n",
     "    assert str(flex(1)) == \"flex-1\"\n",
@@ -342,7 +346,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_flexbox_and_grid_grow_examples():\n",
+    "def test_flexbox_and_grid_grow_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test flex grow utilities.\"\"\"\n",
     "    # Test flex grow utilities\n",
     "    assert str(grow()) == \"grow-1\" # which becomes grow-1\n",
@@ -423,7 +428,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_flexbox_and_grid_shrink_examples():\n",
+    "def test_flexbox_and_grid_shrink_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test flex shrink utilities.\"\"\"\n",
     "    # Test flex shrink utilities\n",
     "    assert str(shrink()) == \"shrink-1\" # which becomes shrink-1\n",
@@ -481,7 +487,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_flexbox_and_grid_order_examples():\n",
+    "def test_flexbox_and_grid_order_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test order utilities for flex and grid items.\"\"\"\n",
     "    # Test order utilities\n",
     "    assert str(order(1)) == \"order-1\"\n",
@@ -544,7 +551,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_flexbox_and_grid_template_columns_examples():\n",
+    "def test_flexbox_and_grid_template_columns_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test grid template columns utilities.\"\"\"\n",
     "    # Test grid template columns\n",
     "    assert str(grid_cols(1)) == \"grid-cols-1\"\n",
@@ -603,7 +611,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_flexbox_and_grid_template_rows_examples():\n",
+    "def test_flexbox_and_grid_template_rows_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test grid template rows utilities.\"\"\"\n",
     "    # Test grid template rows\n",
     "    assert str(grid_rows(1)) == \"grid-rows-1\"\n",
@@ -709,7 +718,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_flexbox_and_grid_column_examples():\n",
+    "def test_flexbox_and_grid_column_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test grid column utilities including span, start, and end.\"\"\"\n",
     "    # Test grid column utilities\n",
     "    assert str(col_span(1)) == \"col-span-1\"\n",
@@ -826,7 +836,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_flexbox_and_grid_row_examples():\n",
+    "def test_flexbox_and_grid_row_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test grid row utilities including span, start, and end.\"\"\"\n",
     "    # Test grid row utilities\n",
     "    assert str(row_span(1)) == \"row-span-1\"\n",
@@ -892,7 +903,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_flexbox_and_grid_flow_examples():\n",
+    "def test_flexbox_and_grid_flow_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test grid auto flow utilities.\"\"\"\n",
     "    # Test grid auto flow utilities\n",
     "    assert grid_flow.row == \"grid-flow-row\"\n",
@@ -1011,7 +1023,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_flexbox_and_grid_auto_cols_rows_examples():\n",
+    "def test_flexbox_and_grid_auto_cols_rows_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test grid auto columns and rows utilities.\"\"\"\n",
     "    # Test grid auto columns/rows\n",
     "    assert auto_cols.auto == \"auto-cols-auto\"\n",
@@ -1107,7 +1120,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_flexbox_and_grid_gap_examples():\n",
+    "def test_flexbox_and_grid_gap_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test gap utilities for flexbox and grid containers.\"\"\"\n",
     "    # Test gap utilities\n",
     "    assert str(gap(0)) == \"gap-0\"\n",
@@ -1235,7 +1249,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_flexbox_and_grid_justify_examples():\n",
+    "def test_flexbox_and_grid_justify_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test justify utilities for flex and grid containers.\"\"\"\n",
     "    # Test justify utilities\n",
     "    assert justify.start == \"justify-start\"\n",
@@ -1362,7 +1377,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_flexbox_and_grid_align_examples():\n",
+    "def test_flexbox_and_grid_align_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test align utilities for flex and grid containers.\"\"\"\n",
     "    # Test align utilities\n",
     "    assert content.center == \"content-center\"\n",
@@ -1488,7 +1504,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_flexbox_and_grid_place_examples():\n",
+    "def test_flexbox_and_grid_place_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test place utilities for grid containers.\"\"\"\n",
     "    # Test place utilities\n",
     "    assert place_content.center == \"place-content-center\"\n",
@@ -1522,7 +1539,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_flexbox_and_grid_practical_examples():\n",
+    "def test_flexbox_and_grid_practical_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test flexbox and grid utilities in practical FastHTML component examples.\"\"\"\n",
     "    from fasthtml.common import Div, Header, Nav, Main, Article, Aside, Footer, Img, Button, H1, H2, P\n",
     "    \n",
@@ -1710,7 +1728,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_flexbox_and_grid_helper_examples():\n",
+    "def test_flexbox_and_grid_helper_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test helper functions for common flexbox and grid patterns.\"\"\"\n",
     "    # Test helper functions\n",
     "    assert flex_center() == \"flex justify-center items-center\"\n",
@@ -1732,7 +1751,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_flexbox_and_grid_factory_documentation():\n",
+    "def test_flexbox_and_grid_factory_documentation(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test that factories have accessible documentation.\"\"\"\n",
     "    # Test factory documentation\n",
     "    assert basis.describe() == \"Flex basis utilities for controlling the initial size of flex items\"\n",
