--- a/nbs/utilities/layout.ipynb
+++ b/nbs/utilities/layout.ipynb
@@ -110,7 +110,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_layout_display_examples():\n",
+    "def test_layout_display_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test display utilities with various values.\"\"\"\n",
     "    # Test display utilities with dot notation\n",
     "    assert display_tw.block == \"block\"\n",
@@ -170,7 +171,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_layout_position_examples():\n",
+    "def test_layout_position_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test position utilities.\"\"\"\n",
     "    # Test position utilities with dot notation\n",
     "    assert position.static == \"static\"\n",
@@ -301,7 +303,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_layout_inset_examples():\n",
+    "def test_layout_inset_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test inset utilities for positioning elements.\"\"\"\n",
     "    # Test inset utilities\n",
     "    assert str(inset(0)) == \"inset-0\"\n",
@@ -398,7 +401,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_layout_overflow_examples():\n",
+    "def test_layout_overflow_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test overflow utilities for content handling.\"\"\"\n",
     "    # Test overflow utilities\n",
     "    assert overflow.auto == \"overflow-auto\"\n",
@@ -457,7 +461,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_layout_z_index_examples():\n",
+    "def test_layout_z_index_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test z-index utilities for stack ordering.\"\"\"\n",
     "    # Test z-index utilities\n",
     "    assert str(z(0)) == \"z-0\"\n",
@@ -553,7 +558,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_layout_float_clear_examples():\n",
+    "def test_layout_float_clear_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test float and clear utilities for content wrapping.\"\"\"\n",
     "    # Test float utilities\n",
     "    assert float_tw.right == \"float-right\"\n",
@@ -683,7 +689,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_layout_object_examples():\n",
+    "def test_layout_object_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test object fit and position utilities.\"\"\"\n",
     "    # Test object fit utilities\n",
     "    assert object_fit.contain == \"object-contain\"\n",
@@ -768,7 +775,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_layout_visibility_examples():\n",
+    "def test_layout_visibility_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test visibility and box sizing utilities.\"\"\"\n",
     "    # Test visibility utilities\n",
     "    assert visibility.visible == \"visible\"\n",
@@ -885,7 +893,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_layout_aspect_columns_examples():\n",
+    "def test_layout_aspect_columns_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test aspect ratio and columns utilities.\"\"\"\n",
     "    # Test aspect ratio utilities with dot notation\n",
     "    assert aspect.auto == \"aspect-auto\"\n",
@@ -942,7 +951,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_layout_columns_examples():\n",
+    "def test_layout_columns_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test columns utilities.\"\"\"\n",
     "    # Test columns utilities\n",
     "    assert str(columns(1)) == \"columns-1\"\n",
@@ -1150,7 +1160,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_layout_other_utilities_examples():\n",
+    "def test_layout_other_utilities_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test isolation, break, box decoration, and overscroll utilities.\"\"\"\n",
     "    # Test isolation utilities\n",
     "    assert isolation.isolate == \"isolate\"\n",
@@ -1195,7 +1206,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_layout_practical_examples():\n",
+    "def test_layout_practical_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test layout utilities in practical FastHTML component examples.\"\"\"\n",
     "    from fasthtml.common import Div, Img, Header, Nav, Main, Section, Article, Aside\n",
     "    \n",
@@ -1248,7 +1260,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_layout_factory_documentation():\n",
+    "def test_layout_factory_documentation(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test that factories have accessible documentation.\"\"\"\n",
     "    # Test factory documentation\n",
     "    assert display_tw.describe() == \"Display utilities for controlling the display box type of an element\"\n",
@@ -1359,7 +1372,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_layout_helper_examples():\n",
+    "def test_layout_helper_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test helper functions for common layout patterns.\"\"\"\n",
     "    # Test helper functions\n",
     "    assert center_absolute() == \"absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2\"\n",
