--- a/nbs/utilities/sizing.ipynb
+++ b/nbs/utilities/sizing.ipynb
@@ -85,7 +85,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_sizing_width_examples():\n",
+    "def test_sizing_width_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test width utilities with various scales and values.\"\"\"\n",
     "    # Numeric scales\n",
     "    assert str(w(0)) == \"w-0\"\n",
@@ -128,7 +129,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_sizing_width_named_examples():\n",
+    "def test_sizing_width_named_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test width utilities with named container sizes.\"\"\"\n",
     "    # Named container sizes\n",
     "    assert str(w._3xs) == \"w-3xs\" # (16rem / 256px)\n",
@@ -163,7 +165,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_sizing_width_viewport_examples():\n",
+    "def test_sizing_width_viewport_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test width utilities with viewport units.\"\"\"\n",
     "    # Viewport width units\n",
     "    assert str(w.svw) == \"w-svw\" # (small viewport width)\n",
@@ -197,7 +200,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_sizing_arbitrary_examples():\n",
+    "def test_sizing_arbitrary_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test sizing utilities with arbitrary and custom values.\"\"\"\n",
     "    # Arbitrary values\n",
     "    assert str(w(\"300px\")) == \"w-[300px]\"\n",
@@ -252,7 +256,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_sizing_height_examples():\n",
+    "def test_sizing_height_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test height utilities with various scales and values.\"\"\"\n",
     "    # Numeric scales\n",
     "    assert str(h(0)) == \"h-0\"\n",
@@ -291,7 +296,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_sizing_height_viewport_examples():\n",
+    "def test_sizing_height_viewport_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test height utilities with viewport units.\"\"\"\n",
     "    # Viewport height units\n",
     "    assert str(h.svh) == \"h-svh\" # (small viewport height)\n",
@@ -339,7 +345,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_sizing_min_width_examples():\n",
+    "def test_sizing_min_width_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test min-width utilities.\"\"\"\n",
     "    # Numeric scales\n",
     "    assert str(min_w(0)) == \"min-w-0\"\n",
@@ -392,7 +399,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_sizing_max_width_examples():\n",
+    "def test_sizing_max_width_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test max-width utilities.\"\"\"\n",
     "    # Named sizes (commonly used for content containers)\n",
     "    assert str(max_w.xs) == \"max-w-xs\"\n",
@@ -442,7 +450,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_sizing_container_examples():\n",
+    "def test_sizing_container_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test continer utility.\"\"\"\n",
     "    # Test that container works with combine_classes\n",
     "    result = combine_classes(container, \"mx-auto\", \"px-4\")\n",
@@ -486,7 +495,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_sizing_min_height_examples():\n",
+    "def test_sizing_min_height_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test min-height utilities.\"\"\"\n",
     "    # Numeric scales\n",
     "    assert str(min_h(0)) == \"min-h-0\"\n",
@@ -556,7 +566,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_sizing_size_util_examples():\n",
+    "def test_sizing_size_util_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test size utilities that set both width and height.\"\"\"\n",
     "    # Size utilities set both width and height\n",
     "    assert str(size_util(16)) == \"size-16\"\n",
@@ -588,7 +599,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_sizing_max_height_examples():\n",
+    "def test_sizing_max_height_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test max-height utilities.\"\"\"\n",
     "    # Numeric scales\n",
     "    assert str(max_h(0)) == \"max-h-0\"\n",
@@ -629,7 +641,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_sizing_practical_examples():\n",
+    "def test_sizing_practical_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test sizing utilities in practical FastHTML component examples.\"\"\"\n",
     "    from fasthtml.common import Div, Img, Article, Header, Main, Aside\n",
     "    \n",
@@ -698,7 +711,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_sizing_factory_documentation():\n",
+    "def test_sizing_factory_documentation(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test that factories have accessible documentation.\"\"\"\n",
     "    # Test factory documentation\n",
     "    assert w.describe() == \"Width utilities for setting element width\"\n",
@@ -810,7 +824,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_sizing_helper_examples():\n",
+    "def test_sizing_helper_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test helper functions for common sizing patterns.\"\"\"\n",
     "    # Test helper functions\n",
     "    assert size(w=32, h=16) == \"w-32 h-16\"\n",
