--- a/nbs/utilities/spacing.ipynb
+++ b/nbs/utilities/spacing.ipynb
@@ -89,7 +89,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_spacing_basic_examples():\n",
+    "def test_spacing_basic_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test basic padding utilities with various scale values.\"\"\"\n",
     "    # Numeric scales\n",
     "    assert str(p(0)) == \"p-0\"\n",
@@ -123,7 +124,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_spacing_directional_examples():\n",
+    "def test_spacing_directional_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test directional padding utilities.\"\"\"\n",
     "    # Individual sides\n",
     "    assert str(p.t(4)) == \"pt-4\" # (top)\n",
@@ -157,7 +159,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_spacing_arbitrary_examples():\n",
+    "def test_spacing_arbitrary_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test padding utilities with arbitrary and custom values.\"\"\"\n",
     "    # Arbitrary values\n",
     "    assert str(p(\"10px\")) == \"p-[10px]\"\n",
@@ -215,7 +218,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_spacing_margin_examples():\n",
+    "def test_spacing_margin_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test basic margin utilities with various scale values.\"\"\"\n",
     "    # Numeric scales\n",
     "    assert str(m(0)) == \"m-0\"\n",
@@ -249,7 +253,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_spacing_margin_directional_examples():\n",
+    "def test_spacing_margin_directional_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test directional margin utilities.\"\"\"\n",
     "    # Individual sides\n",
     "    assert str(m.t(4)) == \"mt-4\" # (top)\n",
@@ -286,7 +291,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_spacing_negative_examples():\n",
+    "def test_spacing_negative_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test negative margin utilities.\"\"\"\n",
     "    # Negative values using negative=True\n",
     "    assert str(m(4, negative=True)) == \"-m-4\"\n",
@@ -313,7 +319,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_spacing_logical_examples():\n",
+    "def test_spacing_logical_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test logical properties for padding and margin utilities.\"\"\"\n",
     "    # Logical padding properties\n",
     "    assert str(ps(4)) == \"ps-4\" # (padding-inline-start)\n",
@@ -394,7 +401,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_spacing_space_between_examples():\n",
+    "def test_spacing_space_between_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test space between child elements utilities.\"\"\"\n",
     "    # Horizontal spacing between children\n",
     "    assert str(space.x(4)) == \"space-x-4\"\n",
@@ -436,7 +444,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_spacing_practical_examples():\n",
+    "def test_spacing_practical_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test spacing utilities in practical FastHTML component examples.\"\"\"\n",
     "    from fasthtml.common import Div, P, Button, H2\n",
     "    \n",
@@ -575,7 +584,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_spacing_helper_examples():\n",
+    "def test_spacing_helper_examples(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test helper functions for common spacing patterns.\"\"\"\n",
     "    # Test pad helper\n",
     "    assert pad(4) == \"p-4\"\n",
@@ -599,7 +609,8 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def test_spacing_factory_documentation():\n",
+    "def test_spacing_factory_documentation(\n",
+    "): # TODO: Add type hint\n",
     "    \"\"\"Test that factories have accessible documentation.\"\"\"\n",
     "    # Test main factory documentation\n",
     "    assert p.describe() == \"Padding utilities for controlling element padding\"\n",
